# GeneralsGameCode

./: .gitignore  CMakeLists.txt  vcpkg.json
.github/workflows/: build-macos-bgfx.yml
Core/: CMakeLists.txt
Core/GameEngine/: CMakeLists.txt
Core/GameEngine/Include/Common/: AsciiString.h  GameAudio.h  GameMemory.h  MiniDumper.h  RegistryStore.h  UnicodeString.h
Core/GameEngine/Include/GameClient/: ClientInstance.h  GameWindow.h  WindowVideoManager.h
Core/GameEngine/Include/GameNetwork/: DownloadManager.h  LANAPI.h  NetPacketStructs.h  NetworkDefs.h  NetworkInit.h  Transport.h  networkutil.h  udp.h
Core/GameEngine/Include/GameNetwork/GameSpy/: LocalChatAddress.h
Core/GameEngine/Include/GameNetwork/WOLBrowser/: WebBrowser.h
Core/GameEngine/Source/Common/: FrameRateLimit.cpp  ReplaySimulation.cpp  WorkerProcess.cpp
Core/GameEngine/Source/Common/INI/: INI.cpp
Core/GameEngine/Source/GameClient/: ClientInstance.cpp  GameText.cpp  GlobalLanguage.cpp  LanguageFilter.cpp
Core/GameEngine/Source/GameNetwork/: DownloadManager.cpp  FirewallHelper.cpp  IPEnumeration.cpp  NAT.cpp  NetPacket.cpp  NetPacketStructs.cpp  NetworkInit.cpp  NetworkUtil.cpp  Transport.cpp  udp.cpp
Core/GameEngineDevice/: CMakeLists.txt
Core/GameEngineDevice/Include/MilesAudioDevice/: MilesAudioManager.h
Core/GameEngineDevice/Include/OpenALAudioDevice/: OpenALAudioFileCache.h  OpenALAudioManager.h  OpenALAudioStream.h
Core/GameEngineDevice/Source/BGFXDevice/: CMakeLists.txt
Core/GameEngineDevice/Source/BGFXDevice/Common/: BgfxBackend.cpp  BgfxBootstrap.cpp  BgfxMacOSLayer.mm  BgfxScreenshotCallback.cpp  BgfxTextureCache.cpp
Core/GameEngineDevice/Source/BGFXDevice/Shaders/: fs_solid.sc  fs_terrain.sc  fs_tex2.sc  fs_tex_lit.sc  fs_tex_mlit.sc  fs_triangle.sc  fs_vcolor.sc  varying.def.sc  vs_solid.sc  vs_terrain.sc  vs_tex2.sc  vs_tex_lit.sc  vs_tex_mlit.sc  vs_triangle.sc  vs_vcolor.sc
Core/GameEngineDevice/Source/MilesAudioDevice/: MilesAudioManager.cpp
Core/GameEngineDevice/Source/OpenALAudioDevice/: OpenALAudioFileCache.cpp  OpenALAudioManager.cpp  OpenALAudioStream.cpp
Core/Libraries/Source/WWVegas/: CMakeLists.txt
Core/Libraries/Source/debug/: CMakeLists.txt  debug_cmd.cpp  debug_debug.cpp  debug_debug.h  debug_except.cpp  debug_getdefaultcommands.cpp  debug_internal.cpp  debug_io_con.cpp  debug_io_flat.cpp  debug_io_net.cpp  debug_io_ods.cpp  debug_stack.cpp  internal_io.h
Core/Libraries/Source/profile/: CMakeLists.txt  internal.h  internal_funclevel.h  profile.cpp  profile_funclevel.cpp  profile_funclevel.h  profile_highlevel.cpp  profile_highlevel.h
Dependencies/Utility/: CMakeLists.txt
Dependencies/Utility/Utility/: hresult_compat.h  osdep.h  socket_compat.h  string_compat.h  thread_compat.h  time_compat.h
Dependencies/Utility/Utility/osdep/: osdep.h
Generals/Code/GameEngine/: CMakeLists.txt
Generals/Code/GameEngineDevice/: CMakeLists.txt
Generals/Code/Main/: AppMain.cpp  CMakeLists.txt  WinMain.cpp  WinMain.h
Generals/Code/Tools/: CMakeLists.txt
Generals/Code/Tools/WorldBuilder/: CMakeLists.txt
GeneralsMD/Code/GameEngine/: CMakeLists.txt
GeneralsMD/Code/GameEngineDevice/: CMakeLists.txt
GeneralsMD/Code/Main/: AppMain.cpp  CMakeLists.txt  WinMain.cpp  WinMain.h
GeneralsMD/Code/Tools/: CMakeLists.txt
GeneralsMD/Code/Tools/WorldBuilder/: CMakeLists.txt
cmake/: bgfx.cmake  bink.cmake  compilers.cmake  config-build.cmake  config-memory.cmake  curl.cmake  ffmpeg.cmake  miles.cmake  openal.cmake  sdl3.cmake
cmake/macos/: Info.plist.in  bundle.cmake
docs/: BGFX-3DScene-Wireup-Plan.md  BGFX-MeshRender-Status.md  BGFX-Open-Todos-2026-05-06.md  CrossPlatformPort-Plan.md  HiDPI-Font-Readability.md  Network-Multiplayer-Protocol.md  OpenAL-Apple-Silicon-Crash.md  OpenAL-Gameplay-Parity-Status.md  Phase0-RHI-Seam.md  Phase1-Audio-Video.md  Phase2-Window-Input.md  Phase3-Config-Threading-Browser.md  Phase4-Networking.md  Phase5a-Bgfx-Bringup.md  Phase5b-D3DTypeRemoval.md  Phase5c-D3DXRemoval.md  Phase5d-D3D8PortableShim.md  Phase5e-FirstTriangle.md  Phase5f-UberShaders.md  Phase5g-IRenderBackendPath.md  Phase5h1-BackendRuntime.md  Phase5h10-SpotLightCones.md  Phase5h11-Specular.md  Phase5h12-ShaderMaterialDispatch.md  Phase5h13-BufferBaseUnstub.md  Phase5h14-BufferSortingLockUnstub.md  Phase5h15-DX8BufferSubclassUnstub.md  Phase5h16-DynamicBufferAccessUnstub.md  Phase5h17-DrawCallRouting.md  Phase5h18-DX8BufferShadowRouting.md  Phase5h19-TextureBaseUnstub.md  Phase5h2-DeviceLifetime.md  Phase5h20-TextureBaseInvalidateUnstub.md  Phase5h21-TextureAccessorsUnstub.md  Phase5h22-TextureMissingLoaderBridge.md  Phase5h23-TextureAccountingUnstub.md  Phase5h24-TextureBaseComplete.md  Phase5h25-TextureClassBgfxStubs.md  Phase5h26-TextureSubclassBgfxStubs.md  Phase5h27-TextureCacheWireup.md  (+36 more)
scripts/: build-osx.sh  debug-run.sh  install-game.sh  run-game.sh
tests/: CMakeLists.txt
tests/tst_bgfx_alphatest/: CMakeLists.txt  main.cpp
tests/tst_bgfx_bimg/: CMakeLists.txt  main.cpp
tests/tst_bgfx_bootstrap/: CMakeLists.txt  main.cpp
tests/tst_bgfx_capture/: CMakeLists.txt  main.cpp
tests/tst_bgfx_clear/: CMakeLists.txt  main.cpp
tests/tst_bgfx_dynamic/: CMakeLists.txt  main.cpp
tests/tst_bgfx_fog/: CMakeLists.txt  main.cpp
tests/tst_bgfx_mesh/: CMakeLists.txt  main.cpp
tests/tst_bgfx_multilight/: CMakeLists.txt  main.cpp
tests/tst_bgfx_multitex/: CMakeLists.txt  main.cpp
tests/tst_bgfx_point_light/: CMakeLists.txt  main.cpp
tests/tst_bgfx_rendertarget/: CMakeLists.txt  main.cpp
tests/tst_bgfx_runtime/: CMakeLists.txt  main.cpp
tests/tst_bgfx_specular/: CMakeLists.txt  main.cpp
tests/tst_bgfx_spot_light/: CMakeLists.txt  main.cpp
tests/tst_bgfx_surface/: CMakeLists.txt  main.cpp
tests/tst_bgfx_surface_fmt/: CMakeLists.txt  main.cpp
tests/tst_bgfx_texcache/: CMakeLists.txt  main.cpp
tests/tst_bgfx_texture/: CMakeLists.txt  main.cpp
tests/tst_bgfx_triangle/: CMakeLists.txt  main.cpp
tests/tst_bgfx_uber/: CMakeLists.txt  main.cpp
tests/tst_bgfx_update/: CMakeLists.txt  main.cpp
tests/tst_bgfx_viewport/: CMakeLists.txt  main.cpp
(+303 files in other folders)
