# Standalone test harnesses (not part of game builds).
add_subdirectory(tst_bgfx_clear)
add_subdirectory(tst_bgfx_triangle)
add_subdirectory(tst_bgfx_uber)
add_subdirectory(tst_bgfx_mesh)
add_subdirectory(tst_bgfx_texture)
add_subdirectory(tst_bgfx_bimg)
add_subdirectory(tst_bgfx_multitex)
add_subdirectory(tst_bgfx_multilight)
add_subdirectory(tst_bgfx_dynamic)
add_subdirectory(tst_bgfx_alphatest)
add_subdirectory(tst_bgfx_fog)
add_subdirectory(tst_bgfx_rendertarget)
add_subdirectory(tst_bgfx_capture)
add_subdirectory(tst_bgfx_runtime)
add_subdirectory(tst_bgfx_bootstrap)
add_subdirectory(tst_bgfx_texcache)
add_subdirectory(tst_bgfx_viewport)
add_subdirectory(tst_bgfx_point_light)
add_subdirectory(tst_bgfx_spot_light)
add_subdirectory(tst_bgfx_specular)
add_subdirectory(tst_bgfx_update)
add_subdirectory(tst_bgfx_surface)
add_subdirectory(tst_bgfx_surface_fmt)
